tests/paczka1/fuzzy1/60457079.err
Error in line 10: VqtA7 A185 12,8
Error in line 11: VqtA7 A18 22,4
Error in line 17: VqtA7 A185 11,5
Error in line 24: Xp7qwKdJTb S688 97,7
Error in line 26: ja1QM A185 60,6
Error in line 38: qQKN A942 77,54
Error in line 39: A45 A45 208,22
